# triglyceride

./: .gitignore  Cargo.toml  README.md
examples/: new_display.rs  test.rs
src/: function_profile.rs  lib.rs  profiler.rs
src/ui/: disconnected_display_window.rs  new_display.rs  user_interface.rs
src/utils/: macros.rs  tree.rs  ui_modules.rs
tri_macros/: Cargo.toml
tri_macros/src/: lib.rs
