[package]
name = "triglyceride"
version = "0.1.1"
edition = "2021"
description = "A simple realtime event loop profiler with egui ui"
repository = "https://github.com/zachdedoo13/triglyceride"
documentation = "https://docs.rs/triglyceride"
license = "MIT"


[dependencies]
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
lazy_static = "1.5.0"
cfg = "0.9.0"

egui = { version = "0.29.1", features = [] }
egui_plot = { version = "0.29.0", features = [] }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }

rand = { version = "0.8.5", features = ["std_rng"] }

tri_macros = { path = "tri_macros", version = "0.1.0" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.30.5", features = [] }